

*i2pd-0.7.0 (07 Feb 2015)

  07 Feb 2015; Francisco Blas Izquierdo Riera (klondike) +i2pd-0.7.0.ebuild:
  Bump to 0.7.0

  07 Feb 2015; Francisco Blas Izquierdo Riera (klondike) i2pd-0.5.0.ebuild,
  i2pd-0.6.0.ebuild, i2pd-9999.ebuild:
  Backport mgorny's changes

  07 Jan 2015; Francisco Blas Izquierdo Riera (klondike) i2pd-0.6.0.ebuild:
  Remove library USE as it doesn't work the expected way

*i2pd-0.6.0 (06 Jan 2015)

  06 Jan 2015; Francisco Blas Izquierdo Riera (klondike) +i2pd-0.6.0.ebuild,
  i2pd-9999.ebuild:
  Bump to 0.6.0 with multilib, disable building for non native arches when lib
  isn't desired

  31 Dec 2014; Francisco Blas Izquierdo Riera (klondike) i2pd-9999.ebuild:
  Fix library creation and multilib (for live branch only as it requires
  changes by upstream)

  30 Dec 2014; Francisco Blas Izquierdo Riera (klondike) files/i2pd.initd:
  Fix the init.d

  30 Dec 2014; Francisco Blas Izquierdo Riera (klondike) files/i2pd.1,
  files/i2pd.conf, files/i2pd.service:
  Improve service handling

  29 Dec 2014; Francisco Blas Izquierdo Riera (klondike) i2pd-0.5.0.ebuild:
  Another artifact from multilib tests install_all should be install

  29 Dec 2014; Francisco Blas Izquierdo Riera (klondike) i2pd-0.5.0.ebuild:
  Sorry library IUSE isn't available for 0.5.0

*i2pd-9999 (29 Dec 2014)

*i2pd-0.5.0 (29 Dec 2014)

  29 Dec 2014; Francisco Blas Izquierdo Riera (klondike) +i2pd-0.5.0.ebuild,
  i2pd-9999.ebuild:
  Add support for the stable i2pd-0.5.0

  29 Dec 2014; Francisco Blas Izquierdo Riera (klondike) +i2pd-9999.ebuild,
  +files/99i2pd, +files/i2pd.1, +files/i2pd.conf, +files/i2pd.confd,
  +files/i2pd.initd, +files/i2pd.logrotate, +files/i2pd.service, +metadata.xml:
  Initial support for i2pd using a live ebuild