@@ -8,23 +8,21 @@ AUX i2pd.confd 176 SHA256 9021447caafd6193a5a87b12d815facf8608d37e0af3e6ff934975
 AUX i2pd.initd 612 SHA256 a424b1f4f2e1beed23f8d7fb191eed71998e5a09156079cd569ff1378e01c9af SHA512 0ffd4c9594682d0459732379c46c06bb19fe16510512f7c707938020bf871531e5d063dfa3c62a1700d645c002b9b44f5d7935358c8c2d1215eddb1e974bcfa2 WHIRLPOOL b9071fdc7069350b4e45c4e4449f3885cd38b05847e30feb2e3750c8b59062e2023a53b51f3b6a45ec217ae040ec7a4b4784bbd9bd6be15e3e714aaf96db030e
 AUX i2pd.logrotate 270 SHA256 cac89d98a0c2eff2eeedb323b3b81c3e316293f80d3397bfeb833f700e98b691 SHA512 08a944576f3f103ef7206e5e09ad7256f79254097d389b955271db9a8e3781332d9ac564cef06a7bb6c3837324abee3035cb18588470f43861310e886c4f7075 WHIRLPOOL 79096ea93a446240d84bc65930e0746f8fae203303d9309a1a345a1818c11525d782f51dd7200f55d5f1c79b79a7d43c9d1a510225aa5bdf522baf4884a45700
 AUX i2pd.service 412 SHA256 afc2b4a72e3bec2c45a838971375a1e8a438bc9cb09a082f138583e226ee8402 SHA512 99ec3dbe7c983d732c483207f49a9b9456c83c17b76605f663fb177142e09e11e0e3fe4e10ffaaca3b9e08519a055ab5efee4117b6e977d22ec80c6aa7c3d3eb WHIRLPOOL dc47e828a8a457e16e16ff5dae50c73fdeaa6a79d36d2f2d4e44919e06e222a2b14d0677c77ef2d471107d8ce669ad499172656f3985bee18697f2725df2e95e
-DIST i2pd-0.5.0.tar.gz 352460 SHA256 7f2033fe1c380c458722d68f611d0fa69a844ceba71db13a918adac6e01a0594 SHA512 08c51dc5fa3712af54b7dcc9f4524fb19d7b42a279646c7852efdf1fd49cf4ea24192c936229954c3733ba4bcbc480205bcfeca739ffae3642f5c62bd24e0cf6 WHIRLPOOL 1812a8733f17cd6b9885cf8af3ad0412f238356121118d46fbed53cb826aaa6c878a045adb69e0a692fd5cd3fc720192c635f4e594d3d42efb2116f14bbba9e9
 DIST i2pd-0.6.0.tar.gz 360829 SHA256 149a8c2d870ebc3988aea06eec906c9e968b3d89ae282bd3b2b5ead205f7c3b7 SHA512 084c75c5f972dbc07740119c3ae1711924cf740391703a95752164eab7a04d6cea0cfb302530e1e1bebafb54f9eed552e747479ae55fb053e824cdf059ab3266 WHIRLPOOL a858a49173755e052f31a95f4f7075965dac0c89943a7dc05c3c88d51b646ab86a7510a9533e33d9c5f0e7736e9f702f6fd0de4e6a841cc3ec57ea5aaf2b991c
 DIST i2pd-0.7.0.tar.gz 367268 SHA256 462ab0c5c0ccdefdce14eae1bc1c5727bad5e8748b57a59c040b91dcba0c2cba SHA512 e76d02fad773c4b8fee93224c2cc48f972d1c66dea3cb80c9be411b6c169381a6aa2aa8a4c288e0c83d01f773701f3dc32022c5b33c67827f239888d71ed5f79 WHIRLPOOL 58eb9946dbeaad0e3901f8b37fdb3c31e010d5bc26ffdaf0708a2853d5d6d187d1bc8d8198179155350fa32da0a5e29c2f72fc172c711ce05b5500d84ae9c40a
-EBUILD i2pd-0.5.0.ebuild 1962 SHA256 64cb6f1abadfc1de30b736d32cc7b5df97eb52919d7861e9488af557b575c2c2 SHA512 9311d77bcae0eba96ff141e1224caa9a9c78f428b477c48aa5f3fb3f390cb50fc8be708445524ea96ccfd7d093c7c483c43cd0b09d90cc365d48278f3368b6f4 WHIRLPOOL 535e3ddd5b6487e2afb58d3f98b75e500da71d17a4f9028459155491c24babad67926e1b6b96751d79f2c8fb3352e3169bba511befd53187660b02c412abe0c1
 EBUILD i2pd-0.6.0.ebuild 1999 SHA256 8b11c3246aedb9c51d8cf0ea24f834d4900eba02ea886cc8bf938ce5f0895200 SHA512 804bd79fa4b5235609562d9983be5b1edd4f2538413112489e7247eee991e159ec0d5a8dab96770b867a0ba0c51d048f4c70f21fdb186bd6133c2feab2ebb79d WHIRLPOOL c09db2b296f4acf8ead0c65c352b8ef5a486ef5ebda54ae04293bb54758083c22078e0aa881be60ca8c4924f061655c478703c2f865378fa297c557a7c1843b2
 EBUILD i2pd-0.7.0.ebuild 1999 SHA256 8b11c3246aedb9c51d8cf0ea24f834d4900eba02ea886cc8bf938ce5f0895200 SHA512 804bd79fa4b5235609562d9983be5b1edd4f2538413112489e7247eee991e159ec0d5a8dab96770b867a0ba0c51d048f4c70f21fdb186bd6133c2feab2ebb79d WHIRLPOOL c09db2b296f4acf8ead0c65c352b8ef5a486ef5ebda54ae04293bb54758083c22078e0aa881be60ca8c4924f061655c478703c2f865378fa297c557a7c1843b2
 EBUILD i2pd-9999.ebuild 2418 SHA256 c25b3dc79729114b840da6542adac517ed31480ff60ae818b1f9219717563cfe SHA512 0a205e42de682b35f48160bf21c6a679fd1d8d73bc92ee69b4f7d750fea8bafb7a18dd4644d433b3d1c577203608a055111677ed7d7c96a0d7a02d4f705404f5 WHIRLPOOL abe650d2f0b0947413cc8b8be15b9f0b6852020ec705f03e209169dcba6c6efacc28efb6313644964ace4e94155ba17fa692c05bd3c5587b376d594a4262401a
-MISC ChangeLog 1757 SHA256 2cc4447d1a6455eba378622009dd8c66168341cac6f994da2ae7cb97002e2789 SHA512 4cf7dab655c585db2ed18e6b507dd0f945327c7ff0d2a38c10a59eda9166317f5609bfcb07ca8913ebfe6d2816580cac1f2cf3e765caa69c1dfbb0e44d07d877 WHIRLPOOL 95467e4a60dc284726b6efe373f6aff57e46da938aaf17b50117805057d1417adc6545820816c9bbc8ee41c8061669e509b9eba6f5316beed93c781c42060c45
+MISC ChangeLog 1857 SHA256 91ad25d333ca08aac4c3fabf5096c3fc83225177b00d2295a785970ba63e22a2 SHA512 c91bcfd830e1a3583a38bbb78d92923a90c1e6ca4e7c0971829cea2c5fb9eccd684d5d8013ab2310754d448140c866b45b9e8f2bf4099af74f2fafbd4def0f17 WHIRLPOOL 83f5a294951b1a41d9f98ab2ad0966ff45690bf4d329c89e3dba18ba157096b0ce257ff82fe0a81dbcfb14876131d8c5ff0efc80fa9271d126b05f42e2c767be
 MISC metadata.xml 424 SHA256 c7959b9cb11a07bde564c8574b349cb7652a5dd3575145b571dc9ed4f09ee7c2 SHA512 0cb4f7e9490b757429932f11ed6845c67fd5dbd4fbcba1485c30e3a46c3c41157daa32a1f36a1e196e7f8c485ae51eb1586d0f14c4986a0ce043f07e44f12bb3 WHIRLPOOL b81a673b6e4a32d9af6e382f66eae6a6d62dbe21af00785b4d0fa557a34041178b8f43bc616151dbe75ce9fe8752367f22cf4311ee6579da614f83ce96dfd45e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJU1jz8AAoJEKXBodJLEo5SrMcH/0CJy4BEBT1B/USBciS5GPdY
-cbq8cbNWT+hfCEAcDjJuSpDzb3umPLB2QAnlP6OJ+NztwXD1y16WTLSe+ggo1aN/
-bi9TkG7xTp5c14eQmUl982cMqkknKuQqwXf05q2df54tnWfMMCyOY+uJyY4aDoWO
-/9DTAnnjQDUO6Tc/9G1qabB81VAnvLls5tLhUXe91q0WTixWFYFoRgo+voCWVozx
-vB8aNBDxUxzMnjxxCpUMXBvpdcO4QyyCBMPBHrx1pp9VEJGGC1Xm6G3SBDEaMSE/
-1ObNXamL9bGvNSAzELCY6xyxt5kmoqiKpn3VwyStpjG+XdO/Rb0Y2sVt4RIhOf4=
-=upCH
+iQEcBAEBCAAGBQJU1j3KAAoJEKXBodJLEo5S1TsIAK/f8gWXrPUqGGVOGjfQR2M1
+XO7WOlabMozIYQJR40S283pPx/jicoBxq70TJ9T/u8kOQWOVeH0HRogpacY/dEvu
+i47rKeIqwux/Vfd4FwQ1Jdn0toYEClZiFJAORqtvdvtU6L3BSsIVondEEwOlpXhV
+ogaHnK3h0J87zBG+elBv0VCsmVro6LUV5zgh2DI6m87QApAMvG6uEoWHjQxk2rrX
+aDZQGzVKYFEhv5ooqe5vSx7idCTjAyDlsCos25GJwjIfG3Yt8dY8yKnNvrIixPXT
+B1simPGWIueK6Eit0Zg7bjnddiYl36e2mKAffEobCFLy9+vZBq6KIoHKCD4uP6s=
+=6ft/
 -----END PGP SIGNATURE-----
