@@ -1,5 +1,8 @@
 
 
+  07 Feb 2015; Francisco Blas Izquierdo Riera (klondike) -i2pd-0.5.0.ebuild:
+  Delete old versions
+
 *i2pd-0.7.0 (07 Feb 2015)
 
   07 Feb 2015; Francisco Blas Izquierdo Riera (klondike) +i2pd-0.7.0.ebuild:
